cloud/w10/lab-temp/argocd/gatekeeper/templates/ct-allowed-registry.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedregistry
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRegistry
      validation:
        openAPIV3Schema:
          type: object
          properties:
            allowedRegistry:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedregistry
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, input.parameters.allowedRegistry)
          msg := sprintf("Image '%v' is not from allowed registry '%v'", [container.image, input.parameters.allowedRegistry])
        }
