cloud/w10/lab-temp/argocd/gatekeeper/templates/ct-no-hostnetwork.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8snohostnetwork
spec:
  crd:
    spec:
      names:
        kind: K8sNoHostNetwork
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snohostnetwork
        violation[{"msg": msg}] {
          input.review.object.spec.hostNetwork == true
          msg := "Pod must not use hostNetwork: true"
        }
